fixed scrollbar issue

--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,7 @@ body {
   text-decoration: none;
   height: 100%;
   overflow-x: hidden; 
+  overflow-y: scroll;
 }
 
 .header {
